Revision history for Perl extension HTTP::BrowserDetect.

{{$NEXT}}

1.75 2014-08-27 17:55:01 America/Toronto
    - Adds detection for Chrome OS (Douglas Christopher Wilson)

1.74 2014-08-27 10:32:16 America/Toronto
    -  Adds detection for Majestic-12 bot (Douglas Christopher Wilson)

1.73 2014-08-15 23:50:42 America/Toronto
    - Adds minimum Perl version
    - dzil tweaks to make CPANTS happier

1.72 2014-06-18 23:34:27 America/Toronto
    - Remove File::Slurp from tests in favour of Path::Tiny

1.71 2014-05-19 22:38:52 America/Toronto
    - Fixes warnings on "frakenagent" (Douglas Christopher Wilson)

1.70 2014-03-27 12:16:12 America/Toronto
    - Add new UA tests & avoid false positive Sun match on Samsung (Jon Jensen)

1.69 2014-02-05 21:56:27 America/Toronto
    - Adds detection for BlackBerry 10 devices (Douglas Christopher Wilson)

1.68 2014-01-26 23:05:14 America/Toronto
    - Adds Yandex & Ahrefs bots (Perlover)

1.67 2014-01-22 16:18:36 America/Toronto
    - Adds detection for tablet Firefox OS (Douglas Christopher Wilson)

1.66 2013-12-17 11:37:20 America/Toronto
    - Adds detection for IE Compatibility View (Douglas Christopher Wilson)

1.65 2013-12-10 21:08:07 America/Toronto
    - Adds os_version for FireFox in OS X (Hao Wu)

1.64 2013-11-25 10:10:23 America/Toronto
    - Adds detection for Opera 15+ (Douglas Christopher Wilson)

1.63 2013-11-21 21:39:46 America/Toronto
    - Adds detection for Internet Explorer 11 (Douglas Christopher Wilson)
    - Adds detection for Windows 8.1 (Douglas Christopher Wilson)

1.62 2013-10-25 14:40:57 America/Toronto
    - Returns explicit undef more consistently (David Ihnen)

1.61 2013-09-06 15:47:57 America/Toronto
    - Reverts a commit that was causing a test to fail when a warning about
      File::Slurp was detected

1.60 2013-08-29 23:02:13 America/Toronto
    - Fixes bug where "Linux" rather than "Android" was returned as os_string
      for Android devices.

1.59 2013-08-18 00:38:21 America/Toronto